--- a/public/style.css
+++ b/public/style.css
@@ -56,6 +56,10 @@ header {
     border: 1px solid rgba(1, 1, 1, 0.1);
 }
 
+.agent__create {
+    margin: 5px;
+}
+
 .agent__selected {
     border: 1px solid red;
 }
